data/derived/comb/progs/unify/prog4743.ml.out
Characters 70-71:
  wwhile(f, f b)
         ^
Error: This expression has type 'a * bool
       but an expression was expected of type 'b -> 'b * bool
